--- a/public/scss/_variables.scss
+++ b/public/scss/_variables.scss
@@ -1,6 +1,7 @@
 $white: #fafafa;
 $black: #332b24;
 $blue : #12487e;
+$lightGray: #f1f1f1;
 
 $darkerBlack: #1b1d1e;
 $darkerBlackOpacity: rgba(27, 29, 30, 0.75);
